<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">
    <LinearLayout
        android:id="@+id/profile_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/person_image_profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:src="@drawable/ic_person"
            android:contentDescription="@string/person_image_profile" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_input_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:startIconDrawable="@drawable/ic_login"
            android:hint="@string/login"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_input_profile_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            app:startIconDrawable="@drawable/ic_password"
            app:endIconMode="password_toggle"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input_profile_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/login_button_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login_status_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:gravity="center"
            />
    </LinearLayout>
</ScrollView>
